@@ -165,7 +165,7 @@ for more information about passdev.
 against the target device after cryptsetup has been invoked.
 The default check 'blkid' can check for any known filesystem type, as it uses
 blkid from util-linux. you can check for a particular filesystem by giving for
-example 'checkargs=ext2' or 'checkargs=swap' as an option in /etc/crypttab.
+example 'checkargs=ext4' or 'checkargs=swap' as an option in /etc/crypttab.
 
  The 'precheck' option is for configuring checks to be run against the source
 device before cryptsetup has been invoked. They are only available for plain
