@@ -141,7 +141,7 @@ parse_opts () {
 			;;
 		tmp)
 			if [ -z "$VALUE" ]; then
-				TMPFS="ext2"
+				TMPFS="ext4"
 			else
 				TMPFS="$VALUE"
 			fi
@@ -221,7 +221,7 @@ check_key () {
 	fi
 
 	# Check ownership of $key
-	OWNER=$(ls -l "$key" | sed 's/^.\{10\}[+\.]\?.[^[:space:]]* \([^[:space:]]*\).*/\1/')
+	OWNER="$(ls -l "$key" | sed 's/^.\{10\}[+\.]\?.[^[:space:]]* \([^[:space:]]*\).*/\1/')"
 	if [ "$OWNER" != "root" ]; then
 		log_warning_msg "$dst: INSECURE OWNER FOR $key, see /usr/share/doc/cryptsetup/README.Debian."
 	fi
@@ -232,14 +232,14 @@ check_key () {
 	fi
 
 	# Check owner group of $key
-	GROUP=$(ls -l "$key" | sed 's/^.\{10\}[+\.]\?.[^[:space:]]* \([^[:space:]]*\).*/\1/')
+	GROUP="$(ls -l "$key" | sed 's/^.\{10\}[+\.]\?.[^[:space:]]* \([^[:space:]]*\).*/\1/')"
 	if [ "$GROUP" != "root" ]; then
 		log_warning_msg "$dst: INSECURE OWNER GROUP FOR $key, see /usr/share/doc/cryptsetup/README.Debian."
 	fi
 
 	# Check group and other permissions
-	GMODE=$(ls -l "$key" | sed 's/[[:space:]].*//;s/^.\{4\}\(.\{3\}\).*/\1/')
-	OMODE=$(ls -l "$key" | sed 's/[[:space:]].*//;s/^.\{7\}\(.\{3\}\).*/\1/')
+	GMODE="$(ls -l "$key" | sed 's/[[:space:]].*//;s/^.\{4\}\(.\{3\}\).*/\1/')"
+	OMODE="$(ls -l "$key" | sed 's/[[:space:]].*//;s/^.\{7\}\(.\{3\}\).*/\1/')"
 	if [ "$GMODE" != "---" ] && [ "$OMODE" != "---" ]; then
 		log_warning_msg "$dst: INSECURE MODE FOR $key, see /usr/share/doc/cryptsetup/README.Debian."
 	fi
@@ -322,7 +322,7 @@ do_noluks () {
 		PRECHECK="/lib/cryptsetup/checks/un_blkid"
 	fi
 
-	if ! pre_out=$("$PRECHECK" "$src" 2> /dev/null) && \
+	if ! pre_out="$($PRECHECK "$src" 2>/dev/null)" && \
 	   ! /lib/cryptsetup/checks/blkid "$src" swap >/dev/null; then
 		log_warning_msg "$dst: the precheck for '$src' failed: $pre_out"
 		return 1
@@ -403,9 +403,9 @@ do_swap () {
 		return 0
 	fi
 
-	if swap_out=$(/lib/cryptsetup/checks/un_blkid "/dev/mapper/${dst}_unformatted" 2> /dev/null) || \
-	   /lib/cryptsetup/checks/blkid "/dev/mapper/${dst}_unformatted" swap > /dev/null 2>&1; then
-		mkswap "/dev/mapper/${dst}_unformatted" > /dev/null 2>&1
+	if swap_out="$(/lib/cryptsetup/checks/un_blkid "/dev/mapper/${dst}_unformatted" 2>/dev/null)" || \
+	   /lib/cryptsetup/checks/blkid "/dev/mapper/${dst}_unformatted" swap >/dev/null 2>&1; then
+		mkswap "/dev/mapper/${dst}_unformatted" >/dev/null 2>&1
 	else
 		log_warning_msg "$dst: the check for '/dev/mapper/$dst' failed. /dev/mapper/$dst contains data: $swap_out"
 		do_close
@@ -421,7 +421,7 @@ do_tmp () {
 		return 0
 	fi
 
-	mkfs -t $TMPFS -q "/dev/mapper/${dst}_unformatted" > /dev/null 2>&1 || return 1
+	mkfs -t $TMPFS -q "/dev/mapper/${dst}_unformatted" >/dev/null 2>&1 || return 1
 	mkdir -p "/var/run/cryptsetup/$dst"
 	mount -t $TMPFS "/dev/mapper/${dst}_unformatted" "/var/run/cryptsetup/$dst" || return 1
 	chmod 1777 "/var/run/cryptsetup/$dst"
@@ -460,7 +460,7 @@ load_optimized_module () {
 	local module optmodule
 	module="$1"
 
-	optmodule=$(find "/lib/modules/$(uname -r)/kernel/arch" -name "${module}*.ko" 2> /dev/null)
+	optmodule=$(find "/lib/modules/$(uname -r)/kernel/arch" -name "${module}*.ko" 2>/dev/null)
 	if [ -n "$optmodule" ] && [ "$(echo -n "$optmodule" | wc -l)" -eq 1 ]; then
 		modprobe "$optmodule" 2>/dev/null && return 0
 	fi
@@ -562,7 +562,7 @@ handle_crypttab_line_stop () {
 		return 0
 	fi
 
-	opencount=$(dmsetup info -c --noheadings -o open "$dst" 2> /dev/null || true)
+	opencount=$(dmsetup info -c --noheadings -o open "$dst" 2>/dev/null || true)
 	if [ -z "$opencount" ]; then
 		device_msg "$dst" "error"
 		return 1
@@ -574,10 +574,10 @@ handle_crypttab_line_stop () {
 		return 0
 	fi
 
-	#major=$(dmsetup info -c --noheadings -o major "$dst" 2> /dev/null || true)
-	#minor=$(dmsetup info -c --noheadings -o minor "$dst" 2> /dev/null || true)
-	src_major=$(dmsetup deps "$dst" 2> /dev/null | sed -e 's/^.*(\([0-9]*\), [0-9]*)$/\1/g' || true)
-	src_minor=$(dmsetup deps "$dst" 2> /dev/null | sed -e 's/^.*([0-9]*, \([0-9]*\))$/\1/g' || true)
+	#major=$(dmsetup info -c --noheadings -o major "$dst" 2>/dev/null || true)
+	#minor=$(dmsetup info -c --noheadings -o minor "$dst" 2>/dev/null || true)
+	src_major="$(dmsetup deps "$dst" 2>/dev/null | sed -e 's/^.*(\([0-9]*\), [0-9]*)$/\1/g' || true)"
+	src_minor="$(dmsetup deps "$dst" 2>/dev/null | sed -e 's/^.*([0-9]*, \([0-9]*\))$/\1/g' || true)"
 
 	if [ -z "$src_major" ] || [ -z "$src_minor" ]; then
 		device_msg "$dst" "error"
@@ -596,7 +596,7 @@ do_start () {
 
 	modprobe -qb dm-mod || true
 	modprobe -qb dm-crypt || true
-	dmsetup mknodes > /dev/null 2>&1 || true
+	dmsetup mknodes >/dev/null 2>&1 || true
 	log_action_begin_msg "Starting $INITSTATE crypto disks"
 	mount_fs
 
