@@ -7,7 +7,7 @@
 decrypt_ssl () {
 	echo "" >&2
 	echo "Decrypting ssl key $1..." >&2
-	if ! /usr/bin/openssl enc -aes-256-cbc -d -salt -in $1 2> /dev/null 2>&1; then
+	if ! /usr/bin/openssl enc -aes-256-cbc -d -salt -in $1 2>/dev/null 2>&1; then
 		return 1
 	fi
 	return 0
